# nixcel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json
images/: BUILD.bazel
nix/: BUILD.bazel  image.nix
pages/: index.tsx
tools/oci/: BUILD.bazel  docker_to_oci.sh  oci_unpack_rule.bzl
